# crosscurses

./: .gitignore  Cargo.toml  README.md  appveyor.yml
examples/: firework.rs  getch_example.rs  hello.rs  newdemo.rs  newtest.rs  rain.rs
src/: attributes.rs  colorpair.rs  input.rs  lib.rs  window.rs
src/unix/: constants.rs  mod.rs
src/windows/: constants.rs  mod.rs  win32.rs  win32a.rs
